Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -8,6 +8,7 @@
  * 1) Add preprocessor for 3rd party libraries.
    * !ClanLib
    * Boost
+   * Minimal Dependencies
  * 1) Fix hashing for linux (add bundled min-depend on !MurmurHash3).
  * 2) Write Documentation
  * 3) Write XML loader example.
