--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -4,17 +4,18 @@
  * 1) Move event and delegate handling out from core-Totem (and Entity)
    * Move it into !TotemEvent library ? split src into src_totem, src_totem_event ? What about any versus template, scheduling ?
    * Create new Entity type (!GameObject, !TotemExamples::Entity?) for examples that uses totem core and events
- * 1) Revisit serializer interface and the handling internal in properties.
- * 1) Add preprocessor for 3rd party libraries.
+ * 1) Remove v7 and v8 editions of template classes
+ * 1) Fix hashing for linux (add bundled min-depend on !MurmurHash3).
+ * 1) Remove special bool handling
+ * 2) Revisit serializer interface and the handling internal in properties.
+ * 3) Add preprocessor for 3rd party libraries.
    * !ClanLib
    * Boost
    * Minimal Dependencies
- * 1) Fix hashing for linux (add bundled min-depend on !MurmurHash3).
- * 1) Remove special bool handling
- * 2) Write Documentation
- * 3) Write XML loader example.
- * 4) Write XML property state saving example.
- * 5) Write stress tests for all features of Totem EDK.
- * 6) Write unit tests for all features of Totem EDK.
- * 7) Write simple game example.
- * 8) Write Entity Editor tool.
+ * 4) Write Documentation
+ * 5) Write XML loader example.
+ * 6) Write XML property state saving example.
+ * 7) Write stress tests for all features of Totem EDK.
+ * 8) Write unit tests for all features of Totem EDK.
+ * 9) Write simple game example.
+ * 10) Write Entity Editor tool.
