Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -6,6 +6,7 @@
    * Boost
    * Minimal Dependencies
  * 3) Add post-build step that copies compiled .lib into lib/ folder.
+ * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 4) Write Documentation
  * 5) Write XML loader example.
  * 6) Write XML property state saving example.
