--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -9,6 +9,7 @@
    * Get rid of types_config.h
    * Remove preprocessor console app
    * Remove .sh based preprocessor
+ * 3) !ClanLib preprocessor - signal connect() needs to store it in a Slot/!SlotContainer (example and tests)
  * 3) Fix includes to not use global includes within own files
  * 3) Add post-build step that copies compiled .lib into lib/ folder.
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
