--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -28,6 +28,7 @@
  * 11) Write Entity Editor tool.
 
 = Recently Fixed TODOs =
+ * 2) Rename the "forced" parameter in set function of Property to override_readonly, and add another parameter named invoke_value_changed. Last parameter should default to true and dictate whether the valueChanged signal is called or not.
  * 1) Move event and delegate handling out from core-Totem (and Entity)
    * Move it into !TotemEvent library ? split src into src_totem, src_totem_event ? What about any versus template, scheduling ?
    * Create new Entity type (!GameObject, !TotemExamples::Entity?) for examples that uses totem core and events
