--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -13,6 +13,7 @@
  * 3) Fix includes to not use global includes within own files (In Progress)
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 3) Revisit Totem's factory handling. Could components and properties leverage pooling for more cache friendly memory handling?
+ * 3) Build doxygen and make sure everything builds fine.
  * 4) Write XML loader example.
  * 5) Write XML property state saving example.
  * 6) Write script language integration example.
