--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,7 +1,7 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
- * 3) Make preprocessor run on tests and examples.
+ * 1) addComponent<T> shouldn't force user into passing a reference!
  * 3) !ClanLib preprocessor - signal connect() needs to store it in a Slot/!SlotContainer (example and tests)
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 3) Revisit Totem's factory handling. Could components and properties leverage pooling for more cache friendly memory handling?
