--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -3,7 +3,6 @@
 = Tasks =
  * 1) addComponent shouldn't force user into passing references for custom params!
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
- * 3) Revisit Totem's factory handling. Could components and properties leverage pooling for more cache friendly memory handling?
  * 3) Build doxygen and make sure everything builds fine.
  * 4) Write unit tests for all features of Totem EDK.
  * 5) Write XML loader example.
@@ -17,8 +16,11 @@
  * 8) Write stress tests for all features of Totem EDK.
  * 9) Write simple game example.
  * 10) Write Entity Editor tool.
+ * 11) Evaluate options for pooling/more cache-friendly memory handling.
 
 = Fixed TODOs =
+ * 3) Revisit Totem's factory handling. Could components and properties leverage pooling for more cache friendly memory handling?
+   * This is premature to look at now. After going through a brainstorm session on this, we'll come back to it later.
  * 3) Write preprocessor into more manageable code.
  * 3) Fix includes to not use global includes within own files
  * 3) Remove unused stuff
