--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -2,6 +2,8 @@
 
 = Tasks =
  * 1) addComponent shouldn't force user into passing references for custom params!
+   * Turns out that the current Any implementation using templates won't work, which again points back to the fact that macros are a bad idea for intuitive syntax, which kind of is key to a 3rd party library like Totem...
+   * Look at refactoring/rewriting the ComponentFactory and base Component classes using C++11 features to achieve a more streamlined and intuitive implementation.
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 3) Build doxygen and make sure everything builds fine.
  * 4) Write unit tests for all features of Totem EDK.
