--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,11 +1,6 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
- * 1) addComponent shouldn't force user into passing references for custom params!
-   * Turns out that the current Any implementation using templates won't work, which again points back to the fact that macros are a bad idea for intuitive syntax, which kind of is key to a 3rd party library like Totem...
-   * Look at refactoring/rewriting the ComponentHandler, ComponentFactory and base Component classes using C++11 features to achieve a more streamlined and intuitive implementation.
- * 2) Consider refactoring property system into supporting both SharedProperties, that's owned by the Entity, and Properties that's local to each component. This would open up the possibility to add multiple instances of the same type of component to an entity as well, which would lead to more flexibility and a more intuitive approach to the programming of Totem, perhaps.
- * 2) Consider writing ComponentFactory as an interface, who's overloaded implementation might support pooling.
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 3) Build doxygen and make sure everything builds fine.
  * 4) Write unit tests for all features of Totem EDK.
@@ -23,6 +18,14 @@
  * 11) Evaluate options for pooling/more cache-friendly memory handling.
 
 = Fixed TODOs =
+ * 2) Consider writing ComponentFactory as an interface, who's overloaded implementation might support pooling.
+    * -> Completely redefined how factories are used in Totem to a much simpler and more flexible approach. Only in the syntax_experiments project for now, will merge with trunk when entire experiment codebase is ready.
+ * 2) Consider refactoring property system into supporting both SharedProperties, that's owned by the Entity, and Properties that's local to each component. This would open up the possibility to add multiple instances of the same type of component to an entity as well, which would lead to more flexibility and a more intuitive approach to the programming of Totem, perhaps.
+    * -> This is now part of the syntax_experiments implementation, which will be mergen into trunk when the entire experiment codebase is ready.
+ * 1) addComponent shouldn't force user into passing references for custom params!
+   * Turns out that the current Any implementation using templates won't work, which again points back to the fact that macros are a bad idea for intuitive syntax, which kind of is key to a 3rd party library like Totem...
+   * Look at refactoring/rewriting the ComponentHandler, ComponentFactory and base Component classes using C++11 features to achieve a more streamlined and intuitive implementation.
+   * -> This has been completely rewritten in the syntax_experiments project, and should be merged into trunk when the entire experiment codebase is ready.
  * 3) Revisit Totem's factory handling. Could components and properties leverage pooling for more cache friendly memory handling?
    * This is premature to look at now. After going through a brainstorm session on this, we'll come back to it later.
  * 3) Write preprocessor into more manageable code.
