--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,6 +1,17 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
+ * 1) PropertyContainer code is shared between component and entity. 
+      - getSharedProperty() becomes owner.get();
+      - addSharedProperty() becomes owner.add();
+      - getProperty() becomes get();
+      - addProperty() becomes add();
+ * 1) Component(const CL_String &name, GameObject &owner) should exchange position so it becomes Component(GameObject &owner, const CL_String &name)
+ * 1) Check if it is possible to use templates without empty <>
+ * 1) getThisAsEntity should be renamed more properly..
+ * 2) Remove config.h og any.h from clanlib preprocessor
+ * 2) Remove cpp files from totem core, and use a test to check compilation instead
+ * 2) Add a pragma to remove warning C4481: nonstandard extension used: override specifier 'override'
  * 2) Component name handling (see below)
  * 2) Properties that's owned by components should also have ValueChanged signals.
  * 2) Components should also have PropertyLists.
