--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -3,7 +3,6 @@
 = Tasks =
  * 1) Check if it is possible to use templates without empty <>
    * -> It's possible to hide with a typedef, but can't be of same name as class :/
- * 1) getThisAsEntity should be renamed more properly..
  * 2) Remove cpp files from totem core, and use a test to check compilation instead
  * 2) Add a pragma to remove warning C4481: nonstandard extension used: override specifier 'override'
  * 2) Component name handling (see below)
@@ -43,6 +42,8 @@ addComponent<MyComponent>("MyComponent2")   // error, nope. Navn settes til inge
 What about InterpolatorComponent? 
 
 = Fixed TODOs =
+ * 1) getThisAsEntity should be renamed more properly..
+   * -> changed to getComponentOwner(). Perhaps any use of the word Entity within Totem core should be changed to ComponentOwner, for a more general naming convention?
  * 2) Remove config.h og any.h from clanlib preprocessor
  * 1) Component(const CL_String &name, GameObject &owner) should exchange position so it becomes Component(GameObject &owner, const CL_String &name)
  * 1) PropertyContainer code is shared between component and entity. 
