Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -4,6 +4,7 @@
  * 1) Check if it is possible to use templates without empty <>
    * -> It's possible to hide with a typedef, but can't be of same name as class :/
  * 2) Remove cpp files from totem core, and use a test to check compilation instead
+   * -> Should we wait with this one until we have unit testing in, or?
  * 2) Add a pragma to remove warning C4481: nonstandard extension used: override specifier 'override'
  * 2) Component name handling (see below)
  * 2) Properties that's owned by components should also have ValueChanged signals.
