Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,10 +1,10 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
- * 1) Check if it is possible to use templates without empty <>
-   * -> It's possible to hide with a typedef, but can't be of same name as class :/
+ * 1) Remove mainpage.h from editions
  * 2) Remove cpp files from totem core, and use a test to check compilation instead
    * -> Should we wait with this one until we have unit testing in, or?
+     Just create a test that includes the current cpp files maybe?
  * 2) Component name handling (see below)
  * 2) Properties that's owned by components should also have ValueChanged signals.
  * 2) Components should also have PropertyLists.
@@ -42,6 +42,8 @@ addComponent<MyComponent>("MyComponent2")   // error, nope. Navn settes til inge
 What about InterpolatorComponent? 
 
 = Fixed TODOs =
+ * 1) Check if it is possible to use templates without empty <>
+   * -> It's possible to hide with a typedef, but can't be of same name as class :/
  * 2) Add a pragma to remove warning C4481: nonstandard extension used: override specifier 'override'
  * 1) getThisAsEntity should be renamed more properly..
    * -> changed to getComponentOwner(). Perhaps any use of the word Entity within Totem core should be changed to ComponentOwner, for a more general naming convention?
