Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -2,9 +2,7 @@
 
 = Tasks =
  * 2) Component name handling (see below)
- * 2) Properties that's owned by components should also have ValueChanged signals.
- * 2) Components should also have PropertyLists.
- * 2) (Shared)PropertyList needs to be updated to work with latest C++11 methods of iterating over std vector.
+ * 2) PropertyList needs to be updated to work with latest C++11 methods of iterating over std vector.
  * 2) Rewrite DelegateSystem to use std::function.
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
  * 3) Write XML component/property state saving and loading example.
@@ -38,6 +36,8 @@ addComponent<MyComponent>("MyComponent2")   // error, nope. Navn settes til inge
 What about InterpolatorComponent? 
 
 = Fixed TODOs =
+ * 2) Properties that's owned by components should also have ValueChanged signals.
+ * 2) Components should also have PropertyLists.
  * 2) Remove cpp files from totem core, and use a test to check compilation instead
    * -> Should we wait with this one until we have unit testing in, or?
      Just create a test that includes the current cpp files maybe?
