--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -2,8 +2,6 @@
 
 = Tasks =
  * 2) Update HashedString to the gamasutra article about Compile-time hashing: http://www.gamasutra.com/view/news/38198/InDepth_Quasi_CompileTime_String_Hashing.php
- * 2) addComponent0...6, couldn't the numbers be removed here?
-   * -> Not sure why, but my compiler crash when I try to remove these numbers... perhaps a bug in VS2010?
  * 2) Component name handling (see below)
  * 2) PropertyList needs to be updated to work with latest C++11 methods of iterating over std vector.
  * 2) Rewrite DelegateSystem to use std::function.
@@ -39,6 +37,9 @@ addComponent<MyComponent>("MyComponent2")   // error, nope. Navn settes til inge
 What about InterpolatorComponent? 
 
 = Fixed TODOs =
+ * 2) addComponent0...6, couldn't the numbers be removed here?
+   * -> Not sure why, but my compiler crash when I try to remove these numbers... perhaps a bug in VS2010?
+   * -> Reordering some parameters fixed the crash.
  * 2) optionalParam in ComponentContainer should be removed.
  * 2) Properties that's owned by components should also have ValueChanged signals.
  * 2) Components should also have PropertyLists.
