--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -26,7 +26,7 @@ addComponent<MyComponent>()   // OK! Type = MyComponent, Name = MyComponent
 addComponent<MyComponent>("Dup")   // OK! Type = MyComponent, Name = Dup
 addComponent<MyComponent>("Dup")   // error! Type = MyComponent, Name = Dup
 addComponent<MyComponent>()   // error! Type = MyComponent, Name = MyComponent
-addComponent<MyComponent2>("Dup")   // ok! Type = MyComponent2, Name = MyComponent
+addComponent<MyComponent2>("Dup")   // ok! Type = MyComponent2, Name = Dup
 addComponent<MyComponent2>()   // ok! Type = MyComponent2, Name = MyComponent2
 addComponent<MyComponent>("MyComponent2")   // OK! Type = MyComponent, Name = MyComponent2
 }}}
