--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -19,7 +19,7 @@
  * 11) Evaluate options for pooling/more cache-friendly memory handling.
 
 = Fixed TODOs =
- * 2) Component name handling (see below)
+ * 2) Component name handling (see bottom of page)
  * 1) Change static Type() function on components to getType(), to be more in line with the virtual getType() you can do on instantiated components.
  * 2) Remove TOTEM_WITHOUT_PREPROCESSING in cmake
  * 3) Fix pragma warnings for override to encapsulate entire file where used.
